# rand-bug

./: Cargo.toml
src/: main.rs
