[package]
name = "rand-bug"
version = "0.1.0"
authors = ["William D. Jones <thor0505@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rand]
default-features = false
version = "0.7.3"
features = ["small_rng"]
